# EcsSampleProject

./: .code_checker.skip  .gitattributes  .gitignore  .gitmodules  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  EcsSampleProject.html  EcsSampleProject.js  EcsSampleProject.wasm  README.md  build.ninja  cmake_install.cmake  main.cpp
.github/workflows/: code-checker.yml  codeql-analysis.yml  deploy-web.yml  linux-build-with-coverage-2.yml  linux-build-with-coverage.yml  linux-build.yml  web-build.yml  windows-build.yml
CodeChecker/: RenderLineSystem.cpp_clang-tidy_e2df53d72bb4548f8c3c363ff940d6b5.plist.html  RenderLineSystem.cpp_clang-tidy_ed9bf08769087e8c59244092ed7af716.plist.html  ScreenToRenderPositionSetSystem.cpp_clang-tidy_34ccac385a67df0668e0f72d1a500472.plist.html  ScreenToRenderPositionSetSystem.cpp_clang-tidy_c941bf05e9572b73e08b1d189852cc02.plist.html  WorldToScreenPositionSetSystem.cpp_clang-tidy_067a69344fd9ef0056a8e198000feaa5.plist.html  WorldToScreenPositionSetSystem.cpp_clang-tidy_c21f7c89abe6c22d2fd7bd73d4bb5362.plist.html  index.html  main.cpp_clang-tidy_e531dd377fc4cbbc954084bb46a9fce2.plist.html  statistics.html
ext/entt/: EnTTConfigVersion.cmake  EnTTTargets.cmake  cmake_install.cmake  entt.pc
src/: main.cpp
src/Common/: ResourceConstants.cpp  ResourceConstants.h
src/Components/: ActionFinish.h  ActionProgress.h  ActionStart.h  AppWindow.h  Army.h  BoxCollider.h  Building.h  Button.h  CameraMovement.h  CameraMovementIntent.h  Click.h  ControlDown.h  ControlPress.h  HasOwner.h  HighlightColor.h  IsHighlightCell.h  IsObstacle.h  IsPlayer.h  IsSelected.h  MouseMove.h  MousePosition.h  MouseScroll.h  NextTurnButton.h  PlayerFlag.h  Position.h  Province.h  RenderColor.h  RenderFill.h  RenderLayer.h  RenderLine.h  RenderPosition.h  RenderPositionSet.h  RenderScale.h  RenderSettings.h  ResourceCounter.h  ResourceHolder.h  Runtime.h  ScreenOffset.h  ScreenPosition.h  ScreenPositionSet.h  (+9 more)
src/Components/Animation/: TextBounceAnimation.h
src/Components/Presentation/: NeedBounceAnimation.h
src/Components/Raylib/: AppWindow.h
src/Components/Render/: Text.h
src/Components/SDL/: AppWindow.h
src/Components/SFML/: AppWindow.h
src/Configs/: BuildingConfig.h  BuildingConfigProvider.cpp  BuildingConfigProvider.h
src/Events/: ControlPress.h  WorldMovement.h
src/Execution/: MainLoopRunner.cpp  MainLoopRunner.h
src/Frontend/: FrontendSystems.h  FrontendSystemsRaylib.cpp  FrontendSystemsSdl.cpp  FrontendSystemsSfml.cpp
src/Logging/: Logger.h  LoggerCout.cpp  LoggerSdl.cpp
src/Systems/: AppWindowInitSystem.cpp  AppWindowInitSystem.h  InputSystem.cpp  InputSystem.h  RenderSystem.cpp  RenderSystem.h  System.h  SystemsBuilder.cpp  SystemsBuilder.h
src/Systems/Animation/: MovementAnimationSystem.cpp  MovementAnimationSystem.h  TextBounceAnimationSystem.cpp  TextBounceAnimationSystem.h
src/Systems/Buildings/: BuildingIncomeSystem.cpp  BuildingIncomeSystem.h
src/Systems/Camera/: CameraMovementIntentSystem.cpp  CameraMovementIntentSystem.h  CameraMovementSystem.cpp  CameraMovementSystem.h  CameraZoomSystem.cpp  CameraZoomSystem.h
src/Systems/Core/: TurnAdvanceSystem.cpp  TurnAdvanceSystem.h
src/Systems/Movement/: MouseArmyMovementSystem.cpp  MouseArmyMovementSystem.h  ObstacleFilterSystem.cpp  ObstacleFilterSystem.h  PlayerMovementSystem.cpp  PlayerMovementSystem.h  WorldMovementSystem.cpp  WorldMovementSystem.h
src/Systems/Presentation/: HighlightCellByMousePositionSystem.cpp  HighlightCellByMousePositionSystem.h  HighlightSelectedSystem.cpp  HighlightSelectedSystem.h  ResourceCounterUpdateSystem.cpp  ResourceCounterUpdateSystem.h  ScreenToRenderPositionSetSystem.cpp  ScreenToRenderPositionSetSystem.h  ScreenToRenderPositionSystem.cpp  ScreenToRenderPositionSystem.h  WorldToScreenPositionSetSystem.cpp  WorldToScreenPositionSetSystem.h  WorldToScreenPositionSystem.cpp  WorldToScreenPositionSystem.h
src/Systems/Raylib/: AppWindowInitSystem.cpp  AppWindowInitSystem.h  HighlightCellByMousePositionSystem.cpp  HighlightCellByMousePositionSystem.h  InputSystem.cpp  InputSystem.h  RenderColorSystem.cpp  RenderColorSystem.h  RenderDisplaySystem.cpp  RenderTextSystem.cpp  RenderTextSystem.h  RenderTextureSystem.cpp  RenderTextureSystem.h  Utils.h
src/Systems/SDL/: AppWindowInitSystem.cpp  AppWindowInitSystem.h  InputSystem.cpp  InputSystem.h  RenderClearSystem.cpp  RenderClearSystem.h  RenderColorSystem.cpp  RenderColorSystem.h  RenderDisplaySystem.cpp  RenderDisplaySystem.h  RenderSystem.cpp  RenderSystem.h
src/Systems/SFML/: AppWindowInitSystem.cpp  AppWindowInitSystem.h  InputSystem.cpp  InputSystem.h  RenderClearSystem.cpp  RenderClearSystem.h  RenderColorSystem.cpp  RenderColorSystem.h  RenderDisplaySystem.cpp  RenderDisplaySystem.h  RenderSystem.cpp  RenderSystem.h  RenderTextSystem.cpp  RenderTextSystem.h  Utils.h
src/Systems/Selection/: MouseArmySelectionSystem.cpp  MouseArmySelectionSystem.h
src/Systems/UI/: ButtonClickSystem.cpp  ButtonClickSystem.h
src/Systems/Utility/: ActionProgressCleanUpSystem.cpp  ActionProgressCleanUpSystem.h  ActionProgressUpdateSystem.cpp  ActionProgressUpdateSystem.h  DeltaTimeUpdateSystem.cpp  DeltaTimeUpdateSystem.h  EventCleanUpSystem.cpp  EventCleanUpSystem.h
src/Types/: Color.h  ControlType.h  Vector2Float.h  Vector2Int.h
src/Utils/: VectorUtils.h
tests/: test_main.cpp
tests/Execution/: MainLoopRunnerTest.h
tests/Systems/: SystemsBuilderTest.h
tests/Systems/Animation/: MovementAnimationSystemTest.h  TextBounceAnimationSystemTest.h
tests/Systems/Buildings/: BuildingIncomeSystemTest.h
tests/Systems/Camera/: CameraMovementIntentSystemTest.h  CameraMovementSystemTest.h  CameraZoomSystemTest.h
tests/Systems/Core/: TurnAdvanceSystemTest.h
tests/Systems/Movement/: MouseArmyMovementSystemTest.h  ObstacleFilterSystemTest.h  PlayerMovementSystemTest.h  WorldMovementSystemTest.h
tests/Systems/Presentation/: HighlightCellByMousePositionSystemTest.h  HighlightSelectedSystemTest.h  ResourceCounterUpdateSystemTest.h  ScreenToRenderPositionSetSystemTest.h  (+2 more)
utils/: build_web.ps1
(+20 files in other folders)
